the_project/manifests/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: broadcaster
          resources:
            requests:
              cpu: 20m
              memory: 48Mi
            limits:
              cpu: 200m
              memory: 128Mi
