the_project/manifests/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: todo-app-pvc
      containers:
        - name: todo-app
          image: todo-app
          resources:
            requests:
              cpu: 100m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: image-cache
              mountPath: /app/files
