the_project/manifests/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: todo-backend
          resources:
            requests:
              cpu: 100m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 256Mi
