the_project/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
