the_project/manifests/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      targetPort: 3000
