the_project/manifests/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2346
      targetPort: 3000
